--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -5,6 +5,6 @@ container: golang:1.12
 
 steps:
   - script: |
-      sudo apt-get update && sudo apt-get install -y unzip
+      su -c "apt-get update" && su -c "apt-get install -y unzip"
       make bootstrap
   - script: make ci
